Enough to run GT5U with Java 11